feat: Render.com 배포 준비 (Dockerfile, 환경변수 기반 설정)
- Dockerfile/.dockerignore 추가 (Render는 Docker로 Spring Boot 배포)
- PORT 환경변수로 포트 바인딩 (배포 플랫폼이 동적으로 포트 할당)
- JWT_SECRET, CORS_ALLOWED_ORIGINS를 환경변수로 분리 (기존엔 로컬 전용 값이 하드코딩)
- postgres 프로파일: DB 접속 정보를 환경변수화, ddl-auto를 create-drop에서
  update로 변경 (기존 설정은 재배포/재시작마다 운영 데이터가 삭제되는 문제가 있었음)
- H2 로컬 DB를 인메모리 → 파일 기반으로 변경 (재시작해도 회원 데이터 유지)
- 프론트엔드 API_BASE를 VITE_API_BASE 환경변수로 설정 가능하게 변경
  (배포 시 실제 백엔드 도메인을 가리키도록)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>